<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/expense_title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:hint="@string/expense_title_hint"
            android:inputType="text" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:labelFor="@id/expense_category_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select_category"/>
            <Spinner
                android:id="@+id/expense_category_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:entries="@array/my_dropdown_items"
                android:prompt="@string/my_dropdown_prompt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:labelFor="@id/expense_amount_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/USD"/>
            <EditText
                android:id="@+id/expense_amount_edit_text"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:hint="@string/expense_amount_hint"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <Button
        android:id="@+id/expense_date_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Wed May 11 11:56 EST 2022" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <EditText
                android:id="@+id/expense_description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:minLines="5"
                android:maxLines="10"
                android:hint="@string/expense_description_hint"
                android:scrollbars="vertical"
                android:inputType="textMultiLine"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>
